--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,11 +1,20 @@
 {
     "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Launch Program",
-            "program": "${workspaceRoot}\\${relativeFile}"
-        }
-    ]
+    "configurations": [{
+        "name": "C++ Launch",
+        "type": "cppdbg",
+        "request": "launch",
+        "targetArchitecture": "x86",
+        "program": "${file}.exe",
+        "cwd": "${fileDirname}",
+        "externalConsole": true,
+        "preLaunchTask": "D:\\mingw\\mingw64\\bin\\gcc.exe",
+        "stopAtEntry": false,
+        "launchCompleteCommand": "exec-run",
+        "windows": {
+            "MIMode": "gdb",
+            "miDebuggerPath": "D:\\mingw\\mingw64\\bin\\gdb.exe"
+        },
+        "args": []
+    }]
 }
